G4E-8134 - Fix saved layout alert z-index.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -682,6 +682,7 @@ html {
       top: 0;
       right: 0.5rem;
       left: 0.5rem;
+      z-index: 1;
       max-height: 0;
       padding: 0 4em 0 1em;
       border-color: transparent;
